Controller-based handling

--- a/RPI.WIoT10.MeArm.Control/Views/LandingPage.xaml
+++ b/RPI.WIoT10.MeArm.Control/Views/LandingPage.xaml
@@ -74,7 +74,7 @@
                 </Button>
                 <Ellipse x:Name="ellColor" HorizontalAlignment="Left" Height="50" VerticalAlignment="Top" Width="50"/>
                 <Image x:Name="imageFrontCamera" Height="100" Width="100"/>
-                <Slider x:Name="slider" Width="100"/>
+                <Slider x:Name="slider" Width="100" ValueChanged="slider_ValueChanged"/>
                 <TextBlock Style="{StaticResource SubtitleTextBlockStyle}">Top-Level Navigation</TextBlock>
                 <TextBlock Style="{StaticResource BodyTextBlockStyle}" Margin="0,4">This sample demonstrates a universal Windows app with top-level navigation.</TextBlock>
 
