--- a/RPI.WIoT10.MeArm.Control/Views/OnboardCameraPage.xaml
+++ b/RPI.WIoT10.MeArm.Control/Views/OnboardCameraPage.xaml
@@ -7,22 +7,6 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-<!--    
-    <Page.Resources>
-        <DataTemplate x:Key="PhotosTemplate">
-            <Grid
-                Background="White"
-                BorderBrush="Black"
-                BorderThickness="1">
-                <Image
-                    Source="{x:Bind Items}"
-                    Stretch="UniformToFill"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"/>
-            </Grid>
-        </DataTemplate>
-    </Page.Resources>
--->
     <Grid x:Name="LayoutRoot" 
           Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
           EntranceNavigationTransitionInfo.IsTargetElement="True"
@@ -52,40 +36,55 @@
 
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <controls:PageHeader Grid.ColumnSpan="2">
+        <controls:PageHeader Grid.Row="0">
             <controls:PageHeader.HeaderContent>
                 <TextBlock x:Name="HeaderTextBlock" Text="Onboard Camera" Style="{StaticResource PageTitleTextBlockStyle}" TextWrapping="NoWrap"/>
             </controls:PageHeader.HeaderContent>
         </controls:PageHeader>
+        <ScrollViewer x:Name="scrollMainImagage" Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Image x:Name="imgMain" HorizontalAlignment="Center" Source="ms-appx:///Assets/SplashScreen.png" DoubleTapped="imgMain_DoubleTapped" />
+        </ScrollViewer>
 
-        <StackPanel Grid.Row="1" Margin="10,0,10, 0">
-            <Image x:Name="imgMain" Source="/Assets/Wide310x150Logo.scale-200.png" Stretch="None" Width="200" Height="200"/>
-            <Button x:Name="btnLoad" Click="btnLoad_Click" >Load</Button>
-            <!--            <GridView x:Name="gridView" Grid.Row="2" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Center" 
-                      ItemTemplate="{StaticResource PhotosTemplate}">
-            </GridView>
--->            <ListView x:Name="lvPictureCache" ItemsSource="{x:Bind Items}" Height="120"
+        <ListView Grid.Row="2" x:Name="lvPictureCache" ItemsSource="{x:Bind Items}" Height="120"
                          ScrollViewer.HorizontalScrollMode="Enabled" 
           ScrollViewer.HorizontalScrollBarVisibility="Auto"
           ScrollViewer.VerticalScrollMode="Disabled"
           ScrollViewer.VerticalScrollBarVisibility="Hidden" SelectionChanged="ListView_SelectionChanged">
-                <ListView.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <ItemsStackPanel Orientation="Horizontal"/>
-                    </ItemsPanelTemplate>
-                </ListView.ItemsPanel>
-                <ListView.ItemTemplate>
-                    <DataTemplate x:DataType="BitmapImage">
-                        <Image Width="120" Height="80"
+            <ListView.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <ItemsStackPanel Orientation="Horizontal"/>
+                </ItemsPanelTemplate>
+            </ListView.ItemsPanel>
+            <ListView.ItemTemplate>
+                <DataTemplate x:DataType="BitmapImage">
+                    <Image Width="120" Height="80"
                    Source="{x:Bind }"
                    Stretch="Uniform" />
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-            <ComboBox x:Name="dropdownResolutions" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" DropDownOpened="dropdownResolutions_DropDownOpened"/>
-        </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <CommandBar x:Name="topbar" Grid.Row="3" Visibility="Visible" HorizontalContentAlignment="Stretch" IsDynamicOverflowEnabled="False" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+            <!--http://stackoverflow.com/questions/39126481/aligning-content-of-commandbar-in-uwp-->
+            <AppBarButton Icon="Camera" x:Name="AppBarButtonCapturePicture" Label="Capture" Click="AppBarButtonCapturePicture_Click" />
+            <AppBarButton Icon="Delete" Label="Delete" />
+            <CommandBar.Content>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="80"></ColumnDefinition>
+                        <ColumnDefinition Width="80"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <ComboBox Grid.Column="0" x:Name="dropdownFormatSelection" HorizontalAlignment="Stretch" Margin="5"  ScrollViewer.HorizontalScrollBarVisibility="Auto" SelectionChanged="dropdownFormatSelection_SelectionChanged"/>
+                    <ComboBox Grid.Column="1" x:Name="dropDownFormats" HorizontalAlignment="Stretch" Margin="5"  SelectionChanged="dropDownFormats_SelectionChanged"></ComboBox>
+                    <ComboBox Grid.Column="2" x:Name="dropDownResolutions" HorizontalAlignment="Stretch" Margin="5" VerticalAlignment="Stretch" SelectionChanged="dropDownResolutions_SelectionChanged"/>
+                </Grid>
+            </CommandBar.Content>
+        </CommandBar>
+
     </Grid>
 </Page>
