--- a/RPI.WIoT10.MeArm.Control/Views/DebugPage.xaml
+++ b/RPI.WIoT10.MeArm.Control/Views/DebugPage.xaml
@@ -3,14 +3,70 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:RPI.WIoT10.MeArm.Control.Views"
+    xmlns:controls="using:RPI.WIoT10.MeArm.Control.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid  x:Name="LayoutRoot"
+    <Grid x:Name="LayoutRoot"
             Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
             EntranceNavigationTransitionInfo.IsTargetElement="True"
             Padding="24,0">
-        <TextBox x:Name="textBox" Margin="10,10,10,0" TextWrapping="Wrap" Text="TextBox" IsReadOnly="True" Height="282" VerticalAlignment="Top"/>
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup>
+                <VisualState>
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="{StaticResource MediumWindowSnapPoint}" />
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="LayoutRoot.Margin" Value="24,0"/>
+                        <Setter Target="HeaderTextBlock.Style" Value="{StaticResource PageTitleTextBlockStyle}"/>
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState>
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="{StaticResource MinWindowSnapPoint}" />
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="LayoutRoot.Margin" Value="12,0"/>
+                        <Setter Target="HeaderTextBlock.Style" Value="{StaticResource NarrowPageTitleTextBlockStyle}"/>
+                    </VisualState.Setters>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
+        <controls:PageHeader x:Name="pageHeader" Grid.Row="0">
+            <controls:PageHeader.HeaderContent>
+                <TextBlock x:Name="HeaderTextBlock" Text="Debug" Style="{StaticResource PageTitleTextBlockStyle}" TextWrapping="NoWrap"/>
+            </controls:PageHeader.HeaderContent>
+        </controls:PageHeader>
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*"></RowDefinition>
+                <RowDefinition Height="1*"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <TextBox x:Name="txtTextReceived" Grid.Row="0" Grid.Column="0" Margin="12" HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="" VerticalAlignment="Stretch" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" IsReadOnly="True"/>
+            <Button x:Name="btnTextReceivedClear" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" Click="btnTextReceivedClear_Click">
+                <SymbolIcon Symbol="Delete"/>
+            </Button>
+
+            <TextBox x:Name="txtTextSent" Grid.Row="1" Grid.Column="0" Margin="12" HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="" VerticalAlignment="Stretch" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" IsReadOnly="True"/>
+            <Button x:Name="btnTextSentClear" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" Click="btnTextSentClear_Click">
+                <SymbolIcon Symbol="Delete"/>
+            </Button>
+            <TextBox x:Name="txtTextCommand" Grid.Row="2" Grid.Column="0" Margin="12" HorizontalAlignment="Stretch" Text="" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" PlaceholderText="{}{&quot;Target&quot;:&quot;.&quot;, &quot;Action&quot;:&quot;ECHO&quot;, &quot;Parameters&quot;:[&quot;Test&quot;, &quot;Another Test&quot;, 123]}"/>
+            <Button x:Name="btnCommandAction" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Center" Click="btnCommandAction_Click">
+                <SymbolIcon Symbol="Play"/>
+            </Button>
+
+        </Grid>
     </Grid>
 </Page>
